# django-para-profissionais

./: .gitignore  README.md  pyproject.toml
.github/workflows/: django_ci.yaml
devpro/: settings.py  urls.py
devpro/base/: tests.py  urls.py  views.py
