[project]
name = "django-para-profissionais"
version = "0.1.0"
description = "Projeto com código fonte do curso Django para Profissionais da DevPro"
authors = [
    {name = "ReivsonLopes",email = "reivson.lopes@hsbs.com.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.9.0"

